# MidiEditor

./: CMakeLists.txt
lib/: CMakeLists.txt  libMidiPlayer.lib  version.cmake.in
scripts_to_build/: make_vc15_abreheret_lib.bat
src/gui/: MainWindow.cpp
tmp/libMidi/: libMidi.sln
tmp/libMidi/libMidi/: libMidi.vcxproj  libMidi.vcxproj.filters
tmp/libMidi/src/MidiEvent/: ChannelPressureEvent.cpp  ChannelPressureEvent.h  ControlChangeEvent.cpp  ControlChangeEvent.h  KeyPressureEvent.cpp  KeyPressureEvent.h  KeySignatureEvent.cpp  KeySignatureEvent.h  MidiEvent.cpp  MidiEvent.h  NoteOnEvent.cpp  NoteOnEvent.h  OffEvent.cpp  OffEvent.h  OnEvent.cpp  OnEvent.h  PitchBendEvent.cpp  PitchBendEvent.h  ProgChangeEvent.cpp  ProgChangeEvent.h  SysExEvent.cpp  SysExEvent.h  TempoChangeEvent.cpp  TempoChangeEvent.h  TextEvent.cpp  TextEvent.h  TimeSignatureEvent.cpp  TimeSignatureEvent.h  UnknownEvent.cpp  UnknownEvent.h
tmp/libMidi/src/midi/: Metronome.cpp  Metronome.h  MidiChannel.cpp  MidiChannel.h  MidiFile.cpp  MidiFile.h  MidiInput.cpp  MidiInput.h  MidiOutput.cpp  MidiOutput.h  MidiPlayer.cpp  MidiPlayer.h  MidiTrack.cpp  MidiTrack.h
tmp/libMidi/src/midi/rtmidi/: RtMidi.cpp  RtMidi.h
tmp/libMidi/src/protocol/: Protocol.cpp  Protocol.h  ProtocolEntry.cpp  ProtocolStep.cpp  ProtocolStep.h
tmp/libMidi/src/pub/: DataType.cpp  DataType.h  dataType.cpp  dataType.h
